# FlightInstructor

./: .gitignore  DESCRIPTION.md  gpt-report.txt  pyproject.toml
.github/workflows/: build.yml
rules/: c172.lua
src/flight_instructor/: __main__.py  aircraft_state.py  event.py  event_detector.py  event_type.py  facilities.py  gui.py  location.py  lua_category.py  lua_runner.py  lua_score_api.py  phase.py  phase_detector.py  rule_context.py  score_cap.py  score_card.py  score_category.py  session.py  severity.py  simconnect_source.py  violation.py
src/flight_instructor/rules/: c172.lua  global.lua
tests/: simulated_telemetry.py  test_event_detector.py  test_lua_runner.py  test_packaging.py  test_phase_detector.py  test_score_card.py  test_simconnect_source.py
