[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-instructor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["lupa>=2.0", "airportsdata>=4.0"]

[project.scripts]
flight-instructor = "flight_instructor.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flight_instructor = ["rules/*.lua"]

[tool.pytest.ini_options]
testpaths = ["tests"]
